--- a/woodstock-webui-jsf-suntheme/src/main/resources/messages/messages.properties
+++ b/woodstock-webui-jsf-suntheme/src/main/resources/messages/messages.properties
@@ -1,4 +1,5 @@
 #
+# Copyright (c) 2024 Contributors to the Eclipse Foundation.
 # Copyright (c) 2007, 2019 Oracle and/or its affiliates. All rights reserved.
 #
 # This program and the accompanying materials are made available under the
@@ -548,7 +549,7 @@ tree.skipTagAltText=Jump Over Tree Navigation Area.
 
 # File Upload messages
 FileUpload.noFile=No file was uploaded
-Upload.error=The specified file exceeds the maximum allowable size of {0} Mb
+Upload.error=The specified file exceeds the maximum allowable size of {0} bytes
 
 # Version Page resources
 Version.closeButton=Close
